JDK-8296968: Update langtools tests to use @enablePreview