@@ -25,8 +25,9 @@
  * @test
  * @bug 8288120
  * @summary Verify an appropriate accessor method is looked up.
- * @compile --enable-preview -source ${jdk.version} ProxyMethodLookup.java
- * @run main/othervm --enable-preview ProxyMethodLookup
+ * @enablePreview
+ * @compile ProxyMethodLookup.java
+ * @run main/othervm ProxyMethodLookup
  */
 public class ProxyMethodLookup {
 
